boreal/tests/assets/invalid_files/compilation/invalid_identifier_binding3.yar
import "pe"

rule a {
    condition:
        for any k, v in (0..2): (true)
}

